# django-dog-training

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py  urls.py
templates/: _base.html
templates/training/: home.html  pet_detail.html  pet_list.html
training/: admin.py  models.py  tests.py  urls.py  views.py
